[tool.poetry]
name = "wunderground-to-influx"
version = "0.1.0"
description = "Pull weather information from Weather Underground API and write to influxdb"
authors = ["bil0026 <zacharybiles@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
WunderWeather = "^1.1.0"
easydict = "^1.13"
arrow = "^1.3.0"
influxdb-client = "^1.47.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
