[tool.poetry]
name = "wunderground-to-influx"
version = "0.2.0"
description = "Pull weather information from Weather Underground API and write to influxdb"
authors = ["bil0026 <zacharybiles@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
WunderWeather = "^1.1.0"
easydict = "^1.13"
arrow = "^1.3.0"
influxdb-client = "^1.47.0"
schedule = "^1.2.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
python-semantic-release = "^9.12.0"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
major_on_zero = true
branch = "main"
upload_to_repository = false
upload_to_release = false
changelog_file = "CHANGELOG.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
